[project]
name = "tree-clipper-workspace"
version = "0.0.0" # not used

# XXX:
# This is inconvenient, there's probably a better way.
# To test and build with a certain Blender version, comment in the respective lines below
# and run this command to rebuild the .venv
#
#   uv sync --python 3.13 --prerelease=allow --index-strategy unsafe-best-match
#
# where the python version matches the one used by the respective Blender version.
# The index-strategy option is so that either the official index or the one from the dailybpy can be used.

#requires-python = "== 3.11.*"
#dependencies = [ "bpy==5.0.*", "tree-clipper"]

requires-python = "== 3.13.*"
dependencies = [ "bpy==5.1.*", "tree-clipper"]

#requires-python = "== 3.13.*"
#dependencies = [ "bpy==5.2.*", "tree-clipper"]


[tool.uv.workspace]
members = [
  "packages/*",
]

[dependency-groups]
build = [
  "vendorize",
  "pip>=25.3",
]
dev = [
  "fake-bpy-module>=20251003",
  "pytest>=9.0.1",
  "deepdiff>=8.6.1",
  "ruff>=0.14.10",
  "ty>=0.0.3",
  "vendorize",
  "pip>=25.3",
]

[tool.uv.sources]
tree-clipper = { workspace = true }
# to get support for pyproject.toml (which isn't released) and to upgrade on changes (only in the fork)
vendorize = { git = "https://github.com/Vollkornaffe/python-vendorize.git", rev = "f284834c558483542ba0886f992ae2b918c22ab3" }

[tool.pytest.ini_options]
testpaths = ["packages"]
norecursedirs = [".git", "build", "__pycache__", "_vendor"]

[tool.vendorize]
target = "packages/tree_clipper_addon/src/tree_clipper_addon/_vendor"
packages = ["packages/tree_clipper"]

[[tool.uv.index]]
name = "bpy"
url = "https://bradyajohnston.github.io/dailybpy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true